--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pypdf
 python-dotenv
 langchain_community
 faiss-cpu
+streamlit
 sentence-transformers==2.7.0
 huggingface_hub==0.23.0
 transformers==4.41.2
